<resources>
    <string name="app_name">Expert Projects</string>
    <string name="title_activity_societe_list">SocieteListActivity</string>
    <string name="societe">Sociétés</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Mot de passe</string>
    <string name="username">Nom de comte</string>
    <string name="first_name">Prenom</string>
    <string name="last_name">Nom</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="username_or_password_incorrect">Mot de passe ou nom de compte incorrect !</string>
    <string name="user_created">Utilisateur crée avec succes</string>
    <string name="edit">Edit</string>
    <string name="delete">Supprimer</string>
    <string name="create_company">Creer societe</string>
    <string name="create_manager">CREER MANAGER</string>
    <string name="manager_last_name">Nom Manager</string>
    <string name="manager_first_name">Prenom Manager</string>
    <string name="manager_creation_fail">Veuillez remplir au moins un champs</string>
    <string name="manager_creation_success">Manager creé avec succes</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Parametres</string>
    <string name="title_activity_depense_list2">DepenseList2Activity</string>
    <string name="title_activity_tache_list">TacheListActivity</string>
    <string name="title_activity_projet_list">ProjetListActivity</string>
    <string name="search_hint">hint</string>
    <string name="error_depense">Vous devez choisir soit une societe ou un projet et non les deux</string>
    <string name="raison_sociale_required">Le champ \'Raison Sociele\' est requis !</string>
    <string name="nom_du_projet_required">Le champ \'Nom du projet\' est requis !</string>
    <string name="ajout_societe">Ajout d\'une societé</string>
    <string name="raison_sociale">Raison sociale</string>
    <string name="date_fondation">Date de fondation</string>
    <string name="create">Créer</string>
    <string name="add">Ajouter</string>
    <string name="show_popup_window">Show Popup Window</string>
    <string name="manage_the_companies">Gérer les entreprises</string>
    <string name="projects">Projets</string>
    <string name="manage_the_projects">Gérer les projets</string>
    <string name="expenses">Dépenses</string>
    <string name="manage_the_expenses">Gérer les dépenses</string>
    <string name="tasks">Temps</string>
    <string name="manage_the_tasks">Gérer le Temps</string>
    <string name="statistics">Statistiques</string>
    <string name="view_the_statistics">Voir les statistiques</string>
    <string name="nom_du_projet">Nom du projet</string>
    <string name="budget_estim_dh">Budget Estimé (DH)</string>
    <string name="date_de_d_but_du_projet">Date de début du projet</string>
    <string name="d_scription">Déscription</string>
    <string name="ajouter">Ajouter</string>
    <string name="contact_email">contact@sharpinfo.ma</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="ajouter_un_manager">Ajouter un Manager</string>
    <string name="pr_nom_du_manager">Prénom du Manager</string>
    <string name="nom_du_manager">Nom du Manager</string>
    <string name="date">Date :</string>
    <string name="sharpinfo_societe_for_infomation">Sharpinfo societe for information</string>
    <string name="dhs">DHs</string>
    <string name="_85500">85500</string>
    <string name="_15_35">15:35</string>
    <string name="_08_05_2018">08-05-2018</string>
    <string name="heure">Heure :</string>
    <string name="societ">Societé :</string>
    <string name="projet">Projet :</string>
    <string name="montant">Montant :</string>
    <string name="g_stion_de_projet_et_de_societes_android">Géstion de Projet et de societes Android</string>
    <string name="commentaire">Commentaire :</string>
    <string name="type_whatever_come_to_your_mind_in_this_text_area">Type whatever come to your mind in this text area</string>
    <string name="montant_dh">Montant (DH)</string>
    <string name="date_jj_mm_aaaa">Date : jj-mm-aaaa</string>
    <string name="heure_hh_mm">Heure : HH:mm</string>
    <string name="at">at</string>
    <string name="description_du_projet">description du projet</string>
    <string name="search">search</string>
    <string name="dur_e_heurs">Durée (Heurs)</string>
    <string name="_03">03</string>
    <string name="heures">Heures</string>
    <string name="nombre_heurs">Nombre heurs</string>
    <string name="update">Update</string>
    <string name="ajouter_un_type_de_depense">Ajouter un type de depense</string>
    <string name="type_de_depense">type de depense</string>
    <string name="dashbord">Tableau de Bord</string>
    <string name="see_the_dashboard">See the dashboard</string>
    <string-array name="charts_array">
        <item>Expense</item>
        <item>Time</item>
    </string-array>
    <string name="title_activity_depense_list_dashboard">DepenseListDashboardActivity</string>
    <string name="error_depense_criteria">Vous ne pouvez pas choisir une societe et un projet en meme temps!</string>
    <string name="title_activity_temps_list_dashboard">TempsListDashboardActivity</string>
    <string name="heure_debut">Heure Debut</string>
    <string name="heure_fin">Heure Fin</string>

</resources>
