<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_layout"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_second_layout"
            android:icon="@drawable/ic_https_black_24dp"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_third_layout"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/about" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
